# malakhov-ai-digest

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  MEMORY.md  README.md  malakhov-ai-digest-architecture.md  next.config.mjs  package-lock.json  package.json  pyproject.toml  render.yaml  seed_sources.csv  tailwind.config.ts  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
bot/: bot.ts  channel-post-core.ts  channel-post.ts  daily-digest-core.ts  daily-digest.ts  digest-selection.ts  weekly-report-core.ts  weekly-report.ts
deploy/: .env.production.example  Caddyfile  compose.production.yml
docs/: ARCHITECTURE.md  ARTICLE_SYSTEM.md  BACKLOG_DESIGN.md  DECISIONS.md  DESIGN.md  EVERGREEN_AGENT.md  EVERGREEN_ARTICLE_PLAYBOOK.md  INDEX.md  Malakhov_AI_Digest_Visual_Style_Guide_v2 (2).md  OPERATIONS.md  ORCHESTRATOR.md  ORCHESTRATOR_fixes_2026-04-24.md  ORCHESTRATOR_observability_publication_2026-05-01.md  ORCHESTRATOR_rework_2026-04-24.md  PROJECT.md  acceptance_criteria_content_quality_2026-05-01.md  acceptance_criteria_editorial_surface_quality_2026-05-12.md  acceptance_criteria_observability_publication_2026-05-01.md  acceptance_criteria_pipeline_reliability_2026-04-20.md  ai_generation_cost_optimization_2026-05-07.md  architecture_current.md  architecture_review_2026-04-16.md  baseline_2026-05-06.md  baseline_2026-06-10.md  baseline_editorial_surface_quality_2026-05-12.md  comfyui_test_report_10_images.md  content_engine_backlog_2026-04-17.md  digest-fix-spec.md  editorial_style_guide.md  (+93 more)
(+564 files in other folders)
