[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "malakhov-ai-digest"
version = "0.1.0"
description = "Telegram bot foundation for Malakhov AI Digest"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "aiogram>=3.10.0",
  "apscheduler>=3.10.4",
  "greenlet>=3.0.3",
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.4",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "aiosqlite>=0.20.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["app"]
